--- a/_posts/2015-12-12-ask-why.md
+++ b/_posts/2015-12-12-ask-why.md
@@ -1,6 +1,6 @@
 ---
 id: 102
-title: 'Ask &#8220;Why?&#8221; to Make Better Software'
+title: "Ask 'Why?' to Make Better Software"
 date: '2015-12-12T03:07:57+00:00'
 author: theothermattm
 layout: post
