Changes to default metadata and categories.  Adding category page.

--- a/_posts/2015-12-12-ask-why.md
+++ b/_posts/2015-12-12-ask-why.md
@@ -2,13 +2,12 @@
 id: 102
 title: "Ask 'Why?' to Make Better Software"
 date: '2015-12-12T03:07:57+00:00'
-author: theothermattm
 layout: post
 guid: 'https://code.theothermattm.com/?p=102'
 permalink: /ask-why/
-background: '/img/clean/bg-post.jpg'
 categories:
     - career
+    - management
     - coding
 tags:
     - people
